--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ ol {
   margin-bottom: 35px;
 }
 .section-title span {
-  color: #f08632;
+  color: #c2986d;
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
@@ -159,7 +159,8 @@ ol {
   text-transform: uppercase;
   padding: 14px 30px;
   color: #ffffff;
-  background: #f08632;
+  background: #c2986d;
+  /* background: #f08632; Orange Shade colour pallate hex code */
   letter-spacing: 2px;
 }
 
@@ -308,7 +309,7 @@ ol {
   Header
 -----------------------*/
 .header {
-  background: #f08632;
+  background: #c2986d;
 }
 
 .header__top {
@@ -547,7 +548,7 @@ ol {
   top: 15px;
   height: calc(100% - 30px);
   width: calc(100% - 30px);
-  border: 1px dashed #f08632;
+  border: 1px dashed #c2986d;
   content: "";
   opacity: 0.3;
 }
@@ -642,8 +643,8 @@ ol {
   bottom: -48px;
   width: 15px;
   height: 15px;
-  border: 1px solid #f08632;
-  border-color: transparent #f08632 #f08632 transparent;
+  border: 1px solid #c2986d;
+  border-color: transparent #c2986d #c2986d transparent;
   content: "";
   -webkit-transform: rotate(-135deg);
       -ms-transform: rotate(-135deg);
@@ -654,7 +655,7 @@ ol {
   transition: all, 0.3s;
 }
 .categories__item:hover {
-  background: #f08632;
+  background: #c2986d;
 }
 .categories__item:hover:after {
   opacity: 1;
@@ -667,7 +668,7 @@ ol {
 }
 
 .categories__item__icon span {
-  color: #f08632;
+  color: #c2986d;
   -webkit-transition: all, 0.2s;
   -o-transition: all, 0.2s;
   transition: all, 0.2s;
@@ -769,7 +770,7 @@ ol {
   display: inline-block;
   width: 70px;
   height: 70px;
-  background: #f08632;
+  background: #c2986d;
   font-size: 24px;
   color: #ffffff;
   line-height: 70px;
@@ -1033,7 +1034,7 @@ ol {
   margin-bottom: 40px;
 }
 .product__item:hover .product__item__pic .product__label span {
-  background: #f08632;
+  background: #c2986d;
   color: #ffffff;
 }
 .product__item:hover .product__item__text .product__item__price {
@@ -1109,7 +1110,7 @@ ol {
   font-size: 16px;
   font-weight: 600;
   display: inline-block;
-  border-bottom: 2px solid #f08632;
+  border-bottom: 2px solid #c2986d;
   padding-bottom: 4px;
 }
 
@@ -1175,7 +1176,7 @@ ol {
 .footer__about .footer__social a {
   display: inline-block;
   color: #ffffff;
-  background: rgba(225, 225, 225, 0.1);
+  background: #b87939;
   height: 45px;
   width: 45px;
   border-radius: 50%;
@@ -1232,7 +1233,7 @@ ol {
 }
 .footer__newslatter form button {
   font-size: 20px;
-  color: #f08632;
+  color: #c2986d;
   background: transparent;
   border: none;
   position: absolute;
@@ -1254,10 +1255,10 @@ ol {
   color: #888888;
 }
 .copyright__text i {
-  color: #f08632;
+  color: #c2986d;
 }
 .copyright__text a {
-  color: #f08632;
+  color: #c2986d;
 }
 
 .copyright__widget {
@@ -1383,7 +1384,7 @@ ol {
   display: inline-block;
   width: 70px;
   height: 70px;
-  background: #f08632;
+  background: #c2986d;
   font-size: 24px;
   color: #ffffff;
   line-height: 70px;
@@ -1673,7 +1674,7 @@ ol {
   font-size: 20px;
   border: 1px solid #e1e1e1;
   display: inline-block;
-  color: #f08632;
+  color: #c2986d;
   padding: 14px;
   line-height: 16px;
 }
@@ -1957,7 +1958,7 @@ ol {
   margin-bottom: 50px;
 }
 .coupon__code span {
-  color: #f08632;
+  color: #c2986d;
 }
 .coupon__code a {
   color: #444444;
@@ -1981,7 +1982,7 @@ ol {
   margin-bottom: 12px;
 }
 .checkout__input p span {
-  color: #f08632;
+  color: #c2986d;
 }
 .checkout__input input {
   height: 50px;
@@ -2023,7 +2024,7 @@ ol {
   visibility: hidden;
 }
 .checkout__input__checkbox label input:checked ~ .checkmark {
-  border-color: #f08632;
+  border-color: #c2986d;
 }
 .checkout__input__checkbox label input:checked ~ .checkmark:after {
   opacity: 1;
@@ -2044,7 +2045,7 @@ ol {
   top: -3px;
   width: 14px;
   height: 7px;
-  border: solid #f08632;
+  border: solid #c2986d;
   border-width: 1.5px 1.5px 0px 0px;
   -webkit-transform: rotate(127deg);
   -ms-transform: rotate(127deg);
@@ -2133,7 +2134,7 @@ ol {
   overflow: hidden;
 }
 .checkout__total__all li span {
-  color: #f08632;
+  color: #c2986d;
   float: right;
 }
 
@@ -2224,7 +2225,7 @@ ol {
   margin-bottom: 55px;
 }
 .class__item:hover .class__item__pic .label {
-  background: #f08632;
+  background: #c2986d;
 }
 .class__item:hover .class__item__text h5 a {
   text-decoration: underline;
@@ -2274,7 +2275,7 @@ ol {
 }
 .class__item__text .read_more {
   font-size: 16px;
-  color: #f08632;
+  color: #c2986d;
   font-weight: 600;
 }
 
@@ -2372,7 +2373,7 @@ ol {
   font-size: 14px;
   color: #ffffff;
   font-weight: 600;
-  background: #f08632;
+  background: #c2986d;
   display: inline-block;
   padding: 4px 15px 2px;
 }
@@ -2425,7 +2426,7 @@ ol {
   letter-spacing: 2px;
   text-transform: uppercase;
   padding-bottom: 3px;
-  border-bottom: 2px solid #f08632;
+  border-bottom: 2px solid #c2986d;
 }
 
 /*---------------------
@@ -2527,7 +2528,7 @@ ol {
   text-decoration: line-through;
 }
 .blog__sidebar__item .blog__sidebar__item__categories ul li:hover a span {
-  color: #f08632;
+  color: #c2986d;
 }
 .blog__sidebar__item .blog__sidebar__item__categories ul li a {
   font-size: 16px;
@@ -2578,7 +2579,7 @@ ol {
   visibility: hidden;
 }
 .blog__sidebar__item form label input:checked ~ .checkmark {
-  border-color: #f08632;
+  border-color: #c2986d;
 }
 .blog__sidebar__item form label input:checked ~ .checkmark:after {
   opacity: 1;
@@ -2599,7 +2600,7 @@ ol {
   top: -3px;
   width: 14px;
   height: 7px;
-  border: solid #f08632;
+  border: solid #c2986d;
   border-width: 1.5px 1.5px 0px 0px;
   -webkit-transform: rotate(127deg);
   -ms-transform: rotate(127deg);
@@ -2835,7 +2836,7 @@ ol {
 }
 .blog__details__print .primary-btn {
   background: transparent;
-  border: 1px solid #f08632;
+  border: 1px solid #c2986d;
   color: #111111;
 }
 .blog__details__print .primary-btn i {
